--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -1,3 +1,46 @@
 <resources>
-    <string name="app_name">OPSC7311 POE</string>
+    <string name="app_name">OPSC7311__POE</string>
+    <string name="signup">SignUp</string>
+    <string name="fullname">FullName</string>
+    <string name="Register">SignUp</string>
+    <string name="sign_in_to_lifetime">Sign in to LifeTime</string>
+    <string name="continue_with_google">Continue_with_Google</string>
+    <string name="username">UserName</string>
+    <string name="reset_password">Reset password</string>
+    <string name="no_account">No_account</string>
+    <string name="create_one">Create one</string>
+    <string name="current_task">Current Task</string>
+    <string name="digram">Digram</string>
+    <string name="_2_20">2:20</string>
+    <string name="tasks">Tasks</string>
+    <string name="all_taps">All Taps</string>
+    <string name="_12_30_pm_2_50_pm">12:30 PM - 2:50 PM</string>
+    <string name="_2_20_">2:20</string>
+    <string name="gym">Gym</string>
+    <string name="_3_00_pm_5_40_pm">3:00 PM - 5:40 PM</string>
+    <string name="_2_40">2:40</string>
+    <string name="housecleaning">HouseCleaning</string>
+    <string name="_9_00am_9_40_am">9:00AM - 9:40 AM</string>
+    <string name="_00_40">00.40</string>
+    <string name="_8_00_pm_9_20_pm">8:00 PM - 9:20 PM</string>
+    <string name="_01_20">01.20</string>
+    <string name="profile">Profile</string>
+    <string name="home">Home</string>
+    <string name="alarm">Alarm</string>
+    <string name="calendar">Calendar</string>
+    <string name="task">Task</string>
+    <string name="add">Add</string>
+    <string name="name">Name</string>
+    <string name="name_">Name</string>
+    <string name="icon">Icon</string>
+    <string name="color">Color</string>
+    <string name="timer">Timer</string>
+    <string name="task_duration">Task Duration</string>
+    <string name="_00_30">00:30</string>
+    <string name="count_down">Count Down</string>
+    <string name="description">Description</string>
+    <string name="task_description">Task Description</string>
+    <string name="note">Note</string>
+    <string name="calendar_">Calendar</string>
+    <string name="aug_19_mon">Aug 19 (Mon)</string>
 </resources>
