--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -13,6 +13,15 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
+    <string name="weeklyS">Weekly summary</string>
+    <string name="chooseW">Choose a Week:</string>
+    <string name="choosG">Choose your graph:</string>
+    <string name="add">Add</string>
+    <string name="pie">Pie Chart</string>
+    <string name="bar">Bar Graph</string>
+    <string name="generate">Generate Summmary</string>
+
+
 
 
 </resources>
