--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">OPSC7311 POE</string>
+    <string name="alarm">Alarm</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
     <string name="calendar">Calendar</string>
     <string name="createD">Create a Diagram</string>
     <string name="design">Redesign Home Page</string>
     <string name="progress">View your progress</string>
-    <string name="CurrentTask">Current Tasks:</string>
+    <string name="ongoingtask">Ongoing Tasks:</string>
     <string name="seeAll">See All></string>
     <string name="timer">Timer</string>
     <string name="start">Start</string>
@@ -14,64 +15,13 @@
     <string name="reset">Reset</string>
     <string name="weeklyS">Weekly summary</string>
     <string name="chooseW">Choose a Week:</string>
-    <string name="choose">Choose your graph:</string>
+    <string name="choosG">Choose your graph:</string>
     <string name="add">Add</string>
     <string name="pie">Pie Chart</string>
     <string name="bar">Bar Graph</string>
-    <string name="generate">Generate Summary</string>
-    <string name="signup">Sign Up</string>
-    <string name="fullName">Full Name</string>
-    <string name="sign_in_to_lifetime">Sign in to LifeTime</string>
-    <string name="continue_with_google">Continue with Google</string>
-    <string name="username">Username</string>
-    <string name="reset_password">Reset password</string>
-    <string name="no_account">No account</string>
-    <string name="create_one">Create one</string>
-    <string name="current_task">Current Task</string>
-    <string name="diagram">Diagram</string>
-    <string name="_2_20">2:20</string>
-    <string name="tasks">Tasks</string>
-    <string name="all_taps">All Taps</string>
-    <string name="_12_30_pm_2_50_pm">12:30 PM - 2:50 PM</string>
-    <string name="_2_20_">2:20</string>
-    <string name="gym">Gym</string>
-    <string name="_3_00_pm_5_40_pm">3:00 PM - 5:40 PM</string>
-    <string name="_2_40">2:40</string>
-    <string name="housecleaning">House Cleaning</string>
-    <string name="_9_00am_9_40_am">9:00AM - 9:40 AM</string>
-    <string name="_00_40">00.40</string>
-    <string name="_8_00_pm_9_20_pm">8:00 PM - 9:20 PM</string>
-    <string name="_01_20">01.20</string>
-    <string name="task">Task</string>
-    <string name="name">Name</string>
-    <string name="name_">Name</string>
-    <string name="icon">Icon</string>
-    <string name="color">Colour</string>
-    <string name="task_duration">Task Duration</string>
-    <string name="_00_30">00:30</string>
-    <string name="count_down">Countdown</string>
-    <string name="description">Description</string>
-    <string name="task_description">Task Description</string>
-    <string name="note">Note</string>
-    <string name="calendar_">Calendar</string>
-    <string name="Date">Aug 19 (Mon)</string>
-    <string name="customP">Customize and Personalize</string>
-    <string name="editUser">Edit Username:</string>
-    <string name="seePass">See Password</string>
-    <string name="profilePho">Upload a Profile Photo</string>
-    <string name="uploadpic">Upload New</string>
-    <string name="save2">Save</string>
-    <string name="Email">Email</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="category">Category</string>
-    <string name="target_hours">Target Hours</string>
-    <string name="time_dash">-</string>
+    <string name="generate">Generate Summmary</string>
+
+
+
+
 </resources>
