--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">OPSC7311 POE</string>
+    <string name="alarm">Alarm</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="calendar">Calendar</string>
+    <string name="createD">Create a Diagram</string>
+    <string name="design">Redesign Home Page</string>
+    <string name="progress">View your progress</string>
+    <string name="ongoingtask">Ongoing Tasks:</string>
+    <string name="seeAll">See All></string>
+    <string name="timer">Timer</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="reset">Reset</string>
+    <string name="weeklyS">Weekly summary</string>
+    <string name="chooseW">Choose a Week:</string>
+    <string name="choosG">Choose your graph:</string>
+    <string name="add">Add</string>
+    <string name="pie">Pie Chart</string>
+    <string name="bar">Bar Graph</string>
+    <string name="generate">Generate Summmary</string>
+
 </resources>
