--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">OPSC7311 POE</string>
-    <string name="alarm">Alarm</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
     <string name="calendar">Calendar</string>
@@ -62,4 +61,5 @@
     <string name="profilePho">Upload a Profile Photo</string>
     <string name="uploadpic">Upload New</string>
     <string name="save2">Save</string>
+    <string name="Email">Email</string>
 </resources>
