--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -72,4 +72,6 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="category">Category</string>
+    <string name="target_hours">Target Hours</string>
+    <string name="time_dash">-</string>
 </resources>
