--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="time_dash">-</string>
     <string name="add_event">Add Event</string>
     <string name="curent_day">%1$s</string>
+    <string name="colourpreview">See Preview of selected Colour</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
