--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -76,4 +76,9 @@
     <string name="time_dash">-</string>
     <string name="cat_select">Category select</string>
     <string name="task_select">Task select</string>
+    <string name="enter_time">Enter Time</string>
+    <string name="select_date">Select Date</string>
+    <string name="enter_hours_spent">Enter hours for task</string>
+
+
 </resources>
