Dead*ss just the activity_monthly_summary.xml UI and framework for Code in MonthlySummary.kt

--- a/OPSC7311POE/app/src/main/res/values/strings.xml
+++ b/OPSC7311POE/app/src/main/res/values/strings.xml
@@ -89,4 +89,12 @@
     <string name="cat_view">View Total Hours For your Categories</string>
 
 
+    <!-- Monthly Summary Page Strings-->
+<string name="top_category">Top Category: </string>
+<string name="total_hours_recorded">Total Hours Recorded: </string>
+<string name="ave_hours_per_day">Average Hours Recorded Per Day: </string>
+<string name="most_productive_day">Most Productive Day: </string>
+<string name="busiest_week">Busiest Week: </string>
+<string name="most_time_consuming_task">Most Time Consuming Task: </string>
+
 </resources>
